@@ -1,6 +1,7 @@
 - if package B obsoletes package A and if A is in potential orphans and B is
   already installed, don't unconditionally mark B as a potential orphan,
   fixes #54590
+- make aria2 disabling work in all cases, should fix #53434 for good.
 
 Version 6.31 - 21 October 2009
 
